feat: make application domains publicly accessible
